Fix the hideous select input gloss on safari

--- a/assets/static/pgo/breakpoint_calc.css
+++ b/assets/static/pgo/breakpoint_calc.css
@@ -42,3 +42,18 @@
 #select2-breakpoint-calc-select-defender-container {
   margin-top: -0.1rem;
 }
+
+select {
+  background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGRhdGEtbmFtZT0iTGF5ZXIgMSIgdmlld0JveD0iMCAwIDQuOTUgMTAiPg0KICA8cGF0aCBkPSJNMS40MSA0LjY3bDEuMDctMS40OSAxLjA2IDEuNDlIMS40MXptMi4xMy42NkwyLjQ4IDYuODIgMS40MSA1LjMzaDIuMTN6Ii8+DQo8L3N2Zz4=
+    ) no-repeat 100% 50% !important;
+  -webkit-appearance:none !important;
+  -moz-appearance:none !important;
+  -ms-appearance:none !important;
+  padding: 0 0 .1rem .8rem !important;
+}
+select::-ms-expand {
+  display: none;
+}
+select:disabled {
+  background-color: #eee !important;
+}
